fix: misalignment on link copy dialog in prod build

--- a/frontend/src/main/resources/index.styl
+++ b/frontend/src/main/resources/index.styl
@@ -53,7 +53,6 @@ button, input
     flex-grow: 2
     display: flex
     flex-direction: column
-    justify-content: space-between
     > *
       margin: 0 0 8px 0
 
